# pytorch-cpp-example

./: CMakeLists.txt  LICENSE  PyTorch_model_Cpp.pt  README.md  example_pytorchNN_cpu.cpp  example_pytorchNN_gpu.cpp  torch_interface.cpp  torch_interface.h
